# paragraph-creator

./: .gitignore  BUILD  CMakeLists.txt  NOTICE  README.md  WORKSPACE  build_with_spack_cmake.sh
src/allreduce/: README.md  main.cc
src/allreduce_generator/: allreduce.cc
src/generators/allreduce_gen/: allreduce_gen.py  graph_pb2.py
src/stencil/: README.md  main.cc
test/: allreduce.sh  stencil.sh  stencil_translation.json
